syntax = "proto3";

package user_api_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/Shemistan/grpc_user_api/pkg/user_api_v1;user_api_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest{
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;

}

message CreateResponse{
  int64 id = 1;
}


message GetRequest {
  int64 id = 1;
}

message GetResponse{
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest{
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  Role role = 4;
  google.protobuf.StringValue old_password = 5;
  google.protobuf.StringValue new_password = 6;
  google.protobuf.StringValue new_password_confirm = 7;
}

message DeleteRequest {
  int64 id = 1;
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}